syntax = "proto3";
package toyraft;

message AppendEntriesRequest {
    uint64 term = 1;
    uint32 leader_id = 2;
    uint64 prev_log_index = 3;
    repeated bytes entries = 4;
    uint64 leader_commmit = 5; 
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    uint32 candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}


service PublicNodeServices {
    
    // rpc append_entries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc request_vote(RequestVoteRequest) returns (RequestVoteResponse) {}
}